dotnet_macros/tests/ui/dotnet_export_unsupported_param.stderr
error: #[dotnet_export]: unsupported parameter type `PositionDto`. Supported: the integer/float primitives, `bool`, `&str`, `String`, `Option<T>`, and `Vec<T>` (the last two for a passthrough primitive `T`).
 --> tests/ui/dotnet_export_unsupported_param.rs:9:22
  |
9 | pub fn bad_export(x: PositionDto) -> i32 {
  |                      ^^^^^^^^^^^
